Tests/test_output/Inference/CopeSets/test_scopes_lm.txt
WARNING: package sun.awt.X11 not in java.desktop
WARNING: package sun.awt.X11 not in java.desktop

ERROR: Undefined function 'contrast_tstats' for input arguments of type 'double'.

Error in test_scopes_lm (line 30)
[tstat_array, residuals, Cbetahat, betahat, sigmahat ] = contrast_tstats( data_reshaped, design_matrix, contrast_matrix );
                                                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error in run (line 112)
evalin('caller', strcat(scriptStem, ';'));
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

STATUS: FAIL
